# chatstar

./: .env.example  GEMINI.md  PINECONE_INTEGRATION.md  README.md  main.py  pinecone_integration_plan.md  pyproject.toml
backend/: README.md  __init__.py  crud.py  crud_setup.py  database.py  main.py  models.py  schemas.py
backend/routers/: __init__.py  buddies.py  chats.py  interests.py  partners.py  topics.py  users.py
core/: ai_provider.py  backend_thread.py  memory_manager.py  ocr_engine.py  scanner.py
mypc/: pinecone_ingestion.py
scripts/: reconcile_sync.py
ui/: data_manager_window.py  login_dialog.py  main_window.py  region_overlay.py  reply_panel.py  selection_window.py  setup_wizard.py
vector_db/: __init__.py  pinecone_ingestion.py  search_service.py  sync_service.py
