[project]
name = "chatstar"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-genai>=1.65.0",
    "langchain-google-genai>=4.2.1",
    "langchain-pinecone>=0.2.13",
    "mss>=10.1.0",
    "pillow>=12.1.1",
    "pinecone-client>=6.0.0",
    "pyperclip>=1.11.0",
    "pyqt6>=6.10.2",
    "pytesseract>=0.3.13",
    "python-dotenv>=1.2.2",
]
