[project]
name = "chatstar"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "google-genai>=1.65.0",
    "langchain-google-genai>=4.2.1",
    "langchain-pinecone>=0.2.13",
    "mss>=10.1.0",
    "pillow>=12.1.1",
    "pinecone-client>=6.0.0",
    "pyperclip>=1.11.0",
    "pyqt6>=6.10.2",
    "pytesseract>=0.3.13",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.0",
    "uvicorn>=0.30.0",
    "psycopg2-binary>=2.9.9",
]
